# aoc23

./: CMakeLists.txt  README.md
Day0/: CMakeLists.txt  main.cc
Day1/: CMakeLists.txt  day1.cc  day1.h  main.cc  tests.cc
Day2/: CMakeLists.txt  day2.cc  day2.h  main.cc  tests.cc
Day3/: CMakeLists.txt  day3.cc  day3.h  main.cc  tests.cc
Day4/: CMakeLists.txt  day4.cc  day4.h  main.cc  tests.cc
Day5/: day5.cc  day5.h  main.cc  tests.cc
Day6/: day6.cc  day6.h  main.cc  tests.cc
Day7/: day7.cc  day7.h  main.cc  tests.cc
Day8/: day8.cc  day8.h  main.cc  tests.cc
lib/helper/: utils.cpp  utils.h
